2005-11-08 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/test_templates.pl: Added mail message in case of OMP failure

2005-11-01 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/raptor_alert.pl: Fixed bugs and protocol problems so that it now
          talks to TALON Central correctly.

        * bin/raptor_gateway.pl: Fixed bugs.

        * eSTAR/RAPTOR/Handler.pm: Fixed bugs.

        * eSTAR/RAPTOR/Util.pm: Added store_voevent() method so that proper ACK
          messages can be return to TALON on receipt of a VOEvent message. The
          system now has an Astro::VO::VOEvent dependancy.

2005-10-17 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/test_templates.pl: Script to be run from crontab file so at JAC
          so we don't have any more missed observations. This checks that the
          templates MSBs are valid for the current instrument and have valid
          blank targets in them.

2005-07-23 Alasdair Allan <aa@astro.ex.ac.uk>
        
        * bin/raptor_gateway.pl: Fully working RAPTOR gateway, works for
          observing requests, and for pushing alerts to RAPTOR via the
          handle_voevent() method call.
        
        * bin/raptor_alert.pl: Gateway for incoming alerts from RAPTOR into
          the eSTAR network, seems to be working. Alerts of course currently
          have nowhere to go!
          
2005-07-22 Alasdair Allan <aa@astro.ex.ac.uk>

        * Changes to support running more than one node agent on a machine
          at once. This may have broken many things, hopefully not!
          
        * bin/raptor_gateway.pl: Skeleton for RAPTOR gateway  

2005-07-01 Alasdair Allan <aa@astro.ex.ac.uk> &
           Brad Cavanagh <bradc@jach.hawaii.edu> 

        * bin/interleave_daemon.pl: Added skeleton of the interleave
	  correlation daemon which now queries the DB web service to
	  grab the reference catalogue.
          
2005-07-01 Alasdair Allan <aa@astro.ex.ac.uk>
